# twmtg

./: README.md  pyproject.toml
templates/: twmtg_card_frag.html  twmtg_card_meta_frag.html  twmtg_card_not_found_frag.html
twmtg/: populate.py  server.py
