[tool.poetry]
name = "twmtg"
version = "0.1.0"
description = ""
authors = ["Ryan Joseph <ryan@electricsheep.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiosqlite = "^0.19.0"
alive-progress = "^3.1.5"
rich = "^13.7.0"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
